# hybrid-rag-web-search-agent

./: README.md  app.py  appcopy.py  build_vector_store.py  gemini_rag_agent_router copy.py  gemini_rag_agent_router.py  main.py  pyproject.toml  query_vector_store.py  requirements_ai_rag.txt  requirments_rag  speak.py
documnets/: ornek
embeddings/faiss_db/: index.faiss  index.pkl
static/css/: style.css
static/js/: main.js
templates/: index.html
