[project]
name = "humanoid-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.0",
    "genai>=2.1.0",
    "google>=3.0.0",
    "google-cloud-texttospeech>=2.25.1",
    "google-generativeai>=0.8.4",
    "gtts>=2.5.4",
    "langchain>=0.3.24",
    "langchain-community>=0.3.21",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
    "sentence-transformers>=4.1.0",
    "speechrecognition>=3.14.2",
    "tavily-python>=0.1.9",
    "tts>=0.22.0",
]
